Reimport configuration files from base image.

--- a/src/ansible/roles/flightdeck-web-init/templates/00_opcache.ini
+++ b/src/ansible/roles/flightdeck-web-init/templates/00_opcache.ini
@@ -1,4 +1,4 @@
-zend_extension = opcache.so
+zend_extension=opcache
 opcache.enable = {{ flightdeck_web.php.opcache_enable | default(flightdeck_web_defaults.php.opcache_enable) | ternary('1', '0') }}
 opcache.validate_timestamps = {{ flightdeck_web.php.opcache_validate_timestamps | default(flightdeck_web_defaults.php.opcache_validate_timestamps) | ternary('1', '0') }}
 opcache.revalidate_freq = {{ flightdeck_web.php.opcache_revalidate_freq | default(flightdeck_web_defaults.php.opcache_revalidate_freq) }}
