--- a/src/ansible/roles/flightdeck-web-build/tasks/main.yml
+++ b/src/ansible/roles/flightdeck-web-build/tasks/main.yml
@@ -44,6 +44,7 @@
     - "php82-pdo_mysql"
     - "php82-pdo_sqlite"
     - "php82-phar"
+    - "php82-pecl-redis"
     - "php82-soap"
     - "php82-session"
     - "php82-simplexml"
