--- a/src/ansible/roles/flightdeck-web-build/tasks/main.yml
+++ b/src/ansible/roles/flightdeck-web-build/tasks/main.yml
@@ -70,6 +70,7 @@
     - "npm"
     - "libsass"
     - "nano"
+    - "yarn"
   notify:
     - clear caches
 - name: Add global php symlink
@@ -187,7 +188,7 @@
 - name: Download Platform CLI installer
   get_url:
     url: "https://raw.githubusercontent.com/platformsh/cli/main/installer.sh"
-    checksum: "sha512:c24aeed710834f74132dbb5e122bddac8f5a56c83ee8925063b1025f3d935501025547b7a118c3146a37f88cf7f1d4e3e273667000f67b471c7257e2d88cbbec"
+    checksum: "sha512:79a2bd8fbb48eac4877b89d207f94151061fa41da4e06b9f92f1ad2d14989ad2919d7386c56d15618dff3315a1d1920eac79bf5dde1537a50b01a6b6aba97016"
     dest: "{{ _platform_tempfile.path }}"
     owner: "root"
     group: "root"
