--- a/src/ansible/roles/flightdeck-web-build/tasks/main.yml
+++ b/src/ansible/roles/flightdeck-web-build/tasks/main.yml
@@ -10,70 +10,58 @@
   vars:
     _pkgs:
       - "apache2"
+      - "apache2-proxy"
       - "libcap"
       - "zlib"
-      - "apache2"
-      - "apache2-proxy"
-      - "php82-apache2"
-      - "php82"
+      - "php83-apache2"
+      - "php83"
       - "git"
       - "patch"
       - "curl"
       - "go-task"
-      - "php82-bcmath"
-      - "php82-ctype"
-      - "php82-curl"
-      - "php82-dom"
-      - "php82-fileinfo"
-      - "php82-gd"
-      - "php82-iconv"
-      - "php82-intl"
-      - "php82-json"
-      - "php82-ldap"
-      - "php82-mbstring"
-      - "php82-pecl-memcached"
-      - "php82-mysqli"
-      - "php82-mysqlnd"
-      - "php82-opcache"
-      - "php82-openssl"
-      - "php82-pecl-apcu"
-      - "php82-pecl-imagick"
-      - "php82-phar"
-      - "php82-sqlite3"
-      - "php82-odbc"
-      - "php82-pdo_odbc"
-      - "php82-pdo"
-      - "php82-pdo_mysql"
-      - "php82-pdo_sqlite"
-      - "php82-phar"
-      - "php82-pecl-redis"
-      - "php82-soap"
-      - "php82-session"
-      - "php82-simplexml"
-      - "php82-sodium"
-      - "php82-tokenizer"
-      - "php82-xdebug"
-      - "php82-exif"
-      - "php82-xml"
-      - "php82-xmlreader"
-      - "php82-xmlwriter"
-      - "php82-zip"
-      - "php82-zlib"
-      - "py3-passlib"
+      - "php83-bcmath"
+      - "php83-ctype"
+      - "php83-curl"
+      - "php83-dom"
+      - "php83-fileinfo"
+      - "php83-gd"
+      - "php83-iconv"
+      - "php83-intl"
+      - "php83-ldap"
+      - "php83-mbstring"
+      - "php83-pecl-memcached"
+      - "php83-mysqli"
+      - "php83-mysqlnd"
+      - "php83-opcache"
+      - "php83-openssl"
+      - "php83-pecl-apcu"
+      - "php83-sqlite3"
+      - "php83-pdo"
+      - "php83-pdo_mysql"
+      - "php83-pdo_sqlite"
+      - "php83-phar"
+      - "php83-soap"
+      - "php83-session"
+      - "php83-simplexml"
+      - "php83-sodium"
+      - "php83-tokenizer"
+      - "php83-xdebug"
+      - "php83-exif"
+      - "php83-xml"
+      - "php83-xmlreader"
+      - "php83-xmlwriter"
+      - "php83-zip"
+      - "php83-zlib"
       - "py3-mysqlclient"
-      - "py3-jmespath"
       - "composer"
       - "mariadb-client"
       - "rsync"
       - "openssh-client"
-      - "nodejs"
-      - "npm"
-      - "libsass"
   notify:
     - clear caches
 - name: Add global php symlink
   file:
-    src: "/usr/bin/php82"
+    src: "/usr/bin/php83"
     dest: "/usr/local/bin/php"
     state: link
     force: yes
@@ -85,28 +73,27 @@
     state: link
     force: yes
     follow: no
-- name: Force Composer to be ran with PHP 8.2
+- name: Force Composer to be ran with PHP 8.3
   lineinfile:
     path: "/usr/bin/composer"
     regexp: '^/usr/bin/php8'
-    line: '/usr/bin/php82 /usr/bin/composer.phar $@'
-- name: Ensure key directories are owned by apache
+    line: '/usr/bin/php83 /usr/bin/composer.phar $@'
+- name: Ensure key directories are owned by the web user
   file:
     path: "{{ item }}"
     state: directory
-    owner: "apache"
-    group: "apache"
+    owner:  "app"
+    group:  "app"
     mode: "u=rwx,g=rwx,o=r"
     recurse: yes
   loop:
     - "/etc/apache2"
     - "/etc/ssl/apache2"
     - "/etc/apache2/sites.d"
-    - "/etc/php82"
+    - "/etc/php83"
     - "/run/apache2"
     - "/var/log/apache2"
     - "/var/www"
-    - "/var/www/.npm-global"
     - "/srv/html"
 - name: Link logs files to stdout for the Docker log collector
   file:
@@ -130,22 +117,10 @@
     - "/var/log/apache2/error.log"
     - "/var/log/apache2/000_default-error_log"
     - "/var/log/apache2/000_default_ssl-error_log"
-- name: Set node global packages to install as user-local
-  shell: >
-    npm config set prefix '/var/www/.npm-global'
-  become: yes
-  become_user: "apache"
-  become_method: "su"
-- name: Install theme utilities
-  shell: >
-    npm install -g sass gulp
-  become: yes
-  become_user: "apache"
-  become_method: "su"
 - name: Template default index.html
   template:
     src: "templates/index.html"
     dest: "/srv/html/index.html"
-    owner: "apache"
-    group: "apache"
+    owner:  "app"
+    group:  "app"
     mode: "u=rw,g=r,o=r"
